atomos/style.css
:root {
    font-family: 'Inter';
    --header-height: 50px
}

body {
    /* MAIN SWITCH: Controls the entire document style */
    /*background-image: url('../src/gases.jpeg');*/

    /*background-color: rgb(118, 204, 204);*/
    height: 100vh;
    padding-top: 100px
}

/* Controls each specific gradient for the different types of elements */
body.gas {
    background-image: linear-gradient(to top right, #caf0f8, #90e0ef, #00b4d8)
}

body.metal {
    background-image: 0
}

body.synthetic {
    background-image: 0
}

/* ------------------------------------------------------------------ */

h1 {
    /* Controls titles across the document */
    text-align: center
}

.main {
    /* Controls properties for the whole body except the header */
    top: 0
}

.fixed-head {
    /* Controls the fixed header */
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 100;
    /*background-image: url('../src/gases.gif');*/
    background-size: cover;
    color: #ffffff;
    background-color: #45cff1;
    border-bottom-right-radius: 30px;
    border-bottom-left-radius: 30px
}

.ZrlWPe.jNnrVc {
    /* This is the model viewer */
    width: 300px;
    height: 150px;
    place-self: center
}

.atom-symbol {
    /* This controls the main element, background color and border */
    border: 1px solid #06608a;
    border-radius: 10px;
    background-color: #84caf3;
    color: #06608a;
    width: 50px;
    height: 70px;
    text-align: center;
    scale: 1.6;
    margin-left: 16px;
    margin-bottom: 30px
}

.atom-symbol .symbol {
    /* This controls the big symbol text and the divider */
    margin: 10px;
    line-height: 1.1;
    font-size: 30px;
    margin-left: 0;
    margin-right: 0px;
    border-bottom: 1px solid #06608a;
    margin-top: -2px;
    padding-bottom: 3px
}

.atom-symbol .config {
    /* This controls the atomic configuration */
    font-size: 11px;
    line-height: 0;
    margin-top: -5px 
}

.atom-symbol .z {
    /* This controls the atomic number */
    margin: 0;
    text-align: left;
    padding-left: 5px;
    padding-bottom: 0;
    margin-bottom: 0;
    margin: 0;
    font-size: 15px;
    z-index: 100

}

.data-table {
    /* Main control of the data table */
    margin-top: 5px;
    border-collapse: collapse;
    width: 280px
}

.data-table table {
    /* Controls specificaly table properties */
    border-collapse: collapse;
}

.data-table td {
    /* Controls how rows and columns behave */
    border: 1px solid;
    border-radius: 30px;
    padding: 3px
}

